ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Minor - P4
    • 3.3.8
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Sharding 14 (05/13/16), Sharding 15 (06/03/16)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The offending line: https://github.com/mongodb/mongo/blob/r3.3.5/src/mongo/db/db.cpp#L322

      2016-05-02T12:07:06.015-0400 D STORAGE  [initandlisten] enter repairDatabases (to check pdfile version #)
      2016-05-02T12:07:06.016-0400 D -        [initandlisten] User Assertion: 20:Cannot create a database in read-only mode.
      2016-05-02T12:07:06.016-0400 W STORAGE  [initandlisten] database /data/queryable/qrtmp/ local could not be opened due to DBException 20: Cannot create a database in read-only mode.
      2016-05-02T12:07:06.016-0400 D STORAGE  [initandlisten] mmf close 
      2016-05-02T12:07:06.016-0400 I STORAGE  [initandlisten] exception in initAndListen: 20 Cannot create a database in read-only mode., terminating
      

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            Daniel Gottlieb (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: